--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,13 @@ dependencies:
   path_provider: any
   intl: ^0.16.0
   dynamic_theme: any
-  # shared_preferences: ^0.5.4+3
-  # firebase_auth: ^0.14.0+8
-  # cloud_firestore: ^0.12.10
-  # firebase_database: ^3.0.9
+  firebase_core: ^0.4.0+9
+  shared_preferences: ^0.5.4+3
+  firebase_auth: ^0.14.0+8
+  cloud_firestore: ^0.12.10
+  firebase_database: ^3.0.9
+  provider: ^3.2.0
+  get_it: ^3.0.3
 
 dev_dependencies:
   flutter_test:
